--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <title>TG手机号查询</title>
-  <link rel="stylesheet" type="text/css" href="static/layui.css">
-  <link rel="stylesheet" type="text/css" href="static/index.css">
-  <script type="text/javascript" src="/static/layui.js"></script>
-  <script type="text/javascript" src="/static/index.js"></script>
+  <link rel="stylesheet" type="text/css" href="static/css/layui.css">
+  <link rel="stylesheet" type="text/css" href="static/css/index.css">
+  <script type="text/javascript" src="/static/js/layui.js"></script>
+  <script type="text/javascript" src="/static/js/index.js"></script>
 </head>
 
 <body>
