--- a/static/index.html
+++ b/static/index.html
@@ -47,10 +47,10 @@
         </div>
         <div class="box side">
           <div class="center-display">
-            <button class="layui-btn layui-btn-primary layui-border-orange">更改绑定</button>
+            <button class="layui-btn layui-btn-primary layui-border-orange" onclick="changeBind()">重新绑定</button>
           </div>
           <div class="center-display">
-            <button class="layui-btn layui-btn-primary layui-border-red">取消绑定</button>
+            <button class="layui-btn layui-btn-primary layui-border-red" onclick="cancelBind()">取消绑定</button>
           </div>
         </div>
       </div>
