--- a/static/index.html
+++ b/static/index.html
@@ -33,10 +33,10 @@
       <div class="condiv">
         <div class="box side">
           <div class="center-display">
-            <button type="button" class="layui-btn layui-btn-primary layui-border-green">下载样例</button>
+            <button type="button" class="layui-btn layui-btn-primary layui-border-green" onclick="downloadExample()">下载样例</button>
           </div>
           <div class="center-display">
-            <button class="layui-btn layui-btn-primary layui-border-blue">历史记录</button>
+            <button class="layui-btn layui-btn-primary layui-border-blue" onclick="openHistory()">历史记录</button>
           </div>
         </div>
         <div class="box">
